<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="it.antoniocasto.connecto.RegisterActivity">

    <TextView
        android:id="@+id/tvRegistrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/registrati"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegistrati"
        android:layout_alignStart="@+id/tvRegistrati"
        android:layout_alignLeft="@+id/tvRegistrati"
        android:text="@string/e_connettiti_con_il_mondo"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/lay_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivUsername"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/immagine_username"
                app:srcCompat="@drawable/ic_form_people" />

            <EditText
                android:id="@+id/etRegUsername"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLines="1"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:id="@+id/view2"
                android:layout_width="272dp"
                android:layout_height="2dp"
                android:background="@color/colorAccent"></View>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_below="@+id/lay_username"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/immagine_email"
                app:srcCompat="@drawable/ic_form_mail" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="Email"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLines="1"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:id="@+id/view3"
                android:layout_width="272dp"
                android:layout_height="2dp"
                android:background="@color/colorAccent"></View>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPassword"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/immagine_password"
                app:srcCompat="@drawable/ic_form_lock" />

            <EditText
                android:id="@+id/etRegPassword"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="272dp"
                android:layout_height="2dp"
                android:background="@color/colorAccent"></View>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lay_password_conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPassword_conf"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/immagine_password"
                app:srcCompat="@drawable/ic_form_lock" />

            <EditText
                android:id="@+id/etRegPassword_conf"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/conferma_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:id="@+id/view_conf"
                android:layout_width="272dp"
                android:layout_height="2dp"
                android:background="@color/colorAccent"></View>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegistrati"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="226dp"
        android:layout_height="51dp"
        android:layout_below="@+id/lay_password_conf"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:onClick="btnRegistratiClick"
        android:text="@string/registratiMaiusc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_below="@+id/buttonRegistrati"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="23dp"
        android:text="@string/gi_registrato" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonRegistrati"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:clickable="true"
        android:focusable="true"
        android:onClick="tvLoginClick"
        android:text="@string/loginMinusc"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />



</RelativeLayout>